--- a/Altkom.Shop.WpfClient/Views/LayoutControls/StackPanelView.xaml
+++ b/Altkom.Shop.WpfClient/Views/LayoutControls/StackPanelView.xaml
@@ -12,6 +12,10 @@
 
     <StackPanel Orientation="Horizontal">
 
+        <Line X1="0" Y1="0" X2="200" Y2="100" Stroke="Black"
+              StrokeThickness="1" />
+
+
         <Button
             Width="250"
             Height="50"
@@ -41,7 +45,7 @@
             Width="250"
             Height="50"
             Margin="10"
-            Background="Red">
+            Background="Yellow">
             Red
         </Button>
 
