--- a/Altkom.Shop.WpfClient/App.xaml
+++ b/Altkom.Shop.WpfClient/App.xaml
@@ -1,9 +1,8 @@
-﻿<Application x:Class="Altkom.Shop.WpfClient.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Altkom.Shop.WpfClient"
-             StartupUri="Views/XamlView.xaml">
-    <Application.Resources>
-         
-    </Application.Resources>
+﻿<Application
+    x:Class="Altkom.Shop.WpfClient.App"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:local="clr-namespace:Altkom.Shop.WpfClient"
+    StartupUri="Views/ShellView.xaml">
+    <Application.Resources />
 </Application>
