--- a/Altkom.Shop.WpfClient/Views/LayoutControls/CanvasView.xaml
+++ b/Altkom.Shop.WpfClient/Views/LayoutControls/CanvasView.xaml
@@ -1,20 +1,37 @@
-﻿<Window x:Class="Altkom.Shop.WpfClient.Views.LayoutControls.CanvasView"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Altkom.Shop.WpfClient.Views.LayoutControls"
-        mc:Ignorable="d"
-        Title="CanvasView" Height="450" Width="800">
+﻿<Window
+    x:Class="Altkom.Shop.WpfClient.Views.LayoutControls.CanvasView"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:Altkom.Shop.WpfClient.Views.LayoutControls"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="CanvasView"
+    Width="800"
+    Height="450"
+    mc:Ignorable="d">
+
+
 
     <Canvas>
 
-        <Button Canvas.Left="71"
-                Canvas.Top="88" Width="86"
-                >Hello</Button>
+        <Button
+            Canvas.Left="71"
+            Canvas.Top="88"
+            Width="86">
+            Hello
+        </Button>
 
-        <Line X1="0" Y1="0" X2="200" Y2="100" Stroke="Black"
-              StrokeThickness="1" />
+        <Line
+            Stroke="Black"
+            StrokeThickness="1"
+            X1="0"
+            X2="200"
+            Y1="0"
+            Y2="100" />
+
+
+        <Button>Hello</Button>
+
 
     </Canvas>
 
