--- a/Altkom.Shop.WpfClient/Views/ShellView.xaml
+++ b/Altkom.Shop.WpfClient/Views/ShellView.xaml
@@ -31,6 +31,15 @@
 
         </StackPanel>
 
+        <StackPanel Background="Blue" />
+
+        <StackPanel Grid.Column="1" Background="Blue" />
+
+
+        <Frame Source="CustomersView.xaml"
+               Grid.Column="1" Grid.Row="1"
+               />
+
 
 
     </Grid>
