--- a/Altkom.Shop.WpfClient/Views/CustomersView.xaml
+++ b/Altkom.Shop.WpfClient/Views/CustomersView.xaml
@@ -39,6 +39,8 @@
 
             <Label>Last name</Label>
             <TextBox Text="{Binding SelectedCustomer.LastName}" />
+
+            <Button>Save</Button>
         </StackPanel>
 
     </Grid>
