--- a/Altkom.Shop.WpfClient/Views/ShellView.xaml
+++ b/Altkom.Shop.WpfClient/Views/ShellView.xaml
@@ -8,27 +8,17 @@
     xmlns:sys="clr-namespace:System;assembly=mscorlib"
     Title="ShellView"
     Width="800"
-    Height="450"
+    Height="650"
     mc:Ignorable="d">
 
     <Window.Resources>
 
-        <SolidColorBrush x:Key="MyBackgroundBrush" Color="DarkMagenta" />
-        <SolidColorBrush x:Key="MyForegroundBrush" Color="White" />
+  
 
         <sys:Double x:Key="ButtonHeight">70</sys:Double>
         <Thickness x:Key="MyMargin">5</Thickness>
 
-        <Style x:Key="DefaultButtonStyle" TargetType="Button">
-            <Setter Property="Background" Value="{StaticResource MyBackgroundBrush}" />
-            <Setter Property="Foreground" Value="{StaticResource MyForegroundBrush}" />
-            <Setter Property="Height" Value="70" />
-            <Setter Property="Margin" Value="5" />
-        </Style>
-
-        <Style x:Key="PrimaryButtonStyle" TargetType="Button" BasedOn="{StaticResource DefaultButtonStyle}">
-            <Setter Property="Background" Value="Green" />
-        </Style>
+        
 
     </Window.Resources>
 
@@ -51,16 +41,20 @@
                 Customers
             </Button>
 
-            <Button Style="{StaticResource DefaultButtonStyle}">
+            <Button>
                 Products
             </Button>
 
-            <Button Style="{StaticResource DefaultButtonStyle}">
+            <Button>
                 Services
             </Button>
 
-            <Button Style="{StaticResource DefaultButtonStyle}">
+            <Button>
                 Orders
+            </Button>
+
+            <Button>
+                Settings
             </Button>
 
         </StackPanel>
