--- a/Altkom.Shop.WpfClient/Views/ProductsView.xaml
+++ b/Altkom.Shop.WpfClient/Views/ProductsView.xaml
@@ -44,6 +44,8 @@
             <Label>Color</Label>
             <ComboBox ItemsSource="{Binding Colors}" />
 
+            <Button Command="{Binding Save}">Save</Button>
+
 
 
         </StackPanel>
