--- a/Altkom.Shop.WpfClient/Views/ShellView.xaml
+++ b/Altkom.Shop.WpfClient/Views/ShellView.xaml
@@ -37,7 +37,7 @@
 
         <StackPanel Grid.Row="1">
 
-            <Button Style="{StaticResource PrimaryButtonStyle}">
+            <Button Command="" Style="{StaticResource PrimaryButtonStyle}">
                 Customers
             </Button>
 
