--- a/Altkom.Shop.WpfClient/Views/CustomersView.xaml
+++ b/Altkom.Shop.WpfClient/Views/CustomersView.xaml
@@ -40,7 +40,7 @@
             <Label>Last name</Label>
             <TextBox Text="{Binding SelectedCustomer.LastName}" />
 
-            <Button>Save</Button>
+            <Button Command="{Binding SendCommand}">Send</Button>
         </StackPanel>
 
     </Grid>
