--- a/Altkom.Shop.WpfClient/Views/CustomersView.xaml
+++ b/Altkom.Shop.WpfClient/Views/CustomersView.xaml
@@ -25,12 +25,17 @@
 
         <!--  Customers  -->
         <ListBox
-            DisplayMemberPath="FullName"
+            ItemTemplate="{StaticResource CustomerTemplate}"
             ItemsSource="{Binding Path=Customers}"
             SelectedItem="{Binding Path=SelectedCustomer}" />
 
         <!--  Selected Customer  -->
         <StackPanel Grid.Column="1">
+
+            <Border Background="Black">
+                <Image Width="100" Source="{StaticResource CustomersImage}" />
+            </Border>
+
 
             <TextBlock Text="{Binding SelectedCustomer.FullName}" />
 
