--- a/Altkom.Shop.WpfClient/Views/LayoutControls/StackPanelView.xaml
+++ b/Altkom.Shop.WpfClient/Views/LayoutControls/StackPanelView.xaml
@@ -12,8 +12,13 @@
 
     <StackPanel Orientation="Horizontal">
 
-        <Line X1="0" Y1="0" X2="200" Y2="100" Stroke="Black"
-              StrokeThickness="1" />
+        <Line
+            Stroke="Black"
+            StrokeThickness="1"
+            X1="0"
+            X2="200"
+            Y1="0"
+            Y2="100" />
 
 
         <Button
