--- a/Altkom.Shop.WpfClient/App.xaml
+++ b/Altkom.Shop.WpfClient/App.xaml
@@ -7,7 +7,13 @@
 
     <Application.Resources>
 
-        <ResourceDictionary Source="Resources/Styles.xaml" />
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Resources/Images.xaml" />
+                <ResourceDictionary Source="Resources/Styles.xaml" />
+                <ResourceDictionary Source="Resources/DataTemplates.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
 
     </Application.Resources>
 </Application>
