--- a/Altkom.Shop.WpfClient/App.xaml
+++ b/Altkom.Shop.WpfClient/App.xaml
@@ -12,6 +12,7 @@
                 <ResourceDictionary Source="Resources/Images.xaml" />
                 <ResourceDictionary Source="Resources/Styles.xaml" />
                 <ResourceDictionary Source="Resources/DataTemplates.xaml" />
+                <ResourceDictionary Source="Resources/ControlTemplates.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
 
