Utworzenie szablonu ProductTemplate

--- a/Altkom.Shop.WpfClient/Resources/ControlTemplates.xaml
+++ b/Altkom.Shop.WpfClient/Resources/ControlTemplates.xaml
@@ -21,7 +21,12 @@
             BorderThickness="{TemplateBinding BorderThickness}"
             CornerRadius="5">
 
-            <ItemsPresenter />
+            <ScrollViewer VerticalScrollBarVisibility="Auto">
+
+                <ItemsPresenter />
+            </ScrollViewer>
+
+
 
         </Border>
     </ControlTemplate>
