--- a/Altkom.Shop.WpfClient/Views/ProductsView.xaml
+++ b/Altkom.Shop.WpfClient/Views/ProductsView.xaml
@@ -10,11 +10,9 @@
     d:Background="White"
     d:DesignHeight="450"
     d:DesignWidth="800"
+    DataContext="{Binding Source={StaticResource ViewModelLocator}, Path=ProductsViewModel}"
     mc:Ignorable="d">
 
-    <Page.DataContext>
-        <vm:ProductsViewModel />
-    </Page.DataContext>
 
     <Grid>
 
