--- a/Altkom.Shop.WpfClient/App.xaml
+++ b/Altkom.Shop.WpfClient/App.xaml
@@ -8,6 +8,9 @@
     <Application.Resources>
 
         <ResourceDictionary>
+
+            <local:ViewModelLocator x:Key="ViewModelLocator" />
+
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Resources/ControlTemplates.xaml" />
                 <ResourceDictionary Source="Resources/Images.xaml" />
