--- a/Altkom.Shop.WpfClient/Views/ShellView.xaml
+++ b/Altkom.Shop.WpfClient/Views/ShellView.xaml
@@ -25,6 +25,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="100" />
             <RowDefinition />
+            <RowDefinition Height="40" />
         </Grid.RowDefinitions>
 
         <Grid.ColumnDefinitions>
@@ -110,6 +111,21 @@
             Grid.Column="1"
             Source="{Binding SelectedView}" />
 
+
+        <StatusBar Grid.Row="2" Grid.ColumnSpan="2">
+
+            <StatusBarItem>
+                <Ellipse
+                    Width="20"
+                    Height="20"
+                    Fill="Green" />
+            </StatusBarItem>
+
+
+            <StatusBarItem>wersja 1.0</StatusBarItem>
+            <StatusBarItem>John Smith</StatusBarItem>
+
+        </StatusBar>
 
 
     </Grid>
