--- a/Altkom.Shop.WpfClient/Views/ServicesView.xaml
+++ b/Altkom.Shop.WpfClient/Views/ServicesView.xaml
@@ -13,7 +13,10 @@
 
     <Grid>
 
-        <TabControl ContentTemplate="{StaticResource ServiceTemplate}" ItemsSource="{Binding Services}">
+        <TabControl ContentTemplate="{StaticResource ServiceTemplate}" 
+                    ItemsSource="{Binding Services}"
+                    SelectedItem="{Binding SelectedService}"
+                    >
 
             <TabControl.ItemTemplate>
                 <DataTemplate>
